@@ -188,6 +188,22 @@ sub clear_usercmd_timer
     return 1;
 }
 
+# Server data deletion on disconnect.
+hook_add('on_disconnect', 'core.irc.deldata', sub {
+    my ($svr) = @_;
+
+    # Delete all data related to the server.
+    if (defined $Proto::IRC::got_001{$svr}) { delete $Proto::IRC::got_001{$svr} }
+    if (defined $Proto::IRC::botinfo{$svr}) { delete $Proto::IRC::botinfo{$svr} }
+    if (defined $Proto::IRC::botchans{$svr}) { delete $Proto::IRC::botchans{$svr} }
+    if (defined $Proto::IRC::chanusers{$svr}) { delete $Proto::IRC::chanusers{$svr} }
+    if (defined $Proto::IRC::csprefix{$svr}) { delete $Proto::IRC::csprefix{$svr} }
+    if (defined $Proto::IRC::chanmodes{$svr}) { delete $Proto::IRC::chanmodes{$svr} }
+    if (defined $Proto::IRC::cap{$svr}) { delete $Proto::IRC::cap{$svr} }
+
+    return 1;
+});
+
 
 1;
 # vim: set ai et sw=4 ts=4:
